added variables and environment variables to config * template placeholders will be replaced by variables in fields annotated by @SupportsTemplate * variables defined in config can refer to each other, but only in their defined order (i.e. a variable defined first cannot reference another one defined below) * environment variables can be used via the `<env.*>` object