@@ -51,6 +51,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.shell:spring-shell-starter-test'
     testImplementation 'com.github.valfirst:slf4j-test:3.0.1'
+    testImplementation 'org.junit-pioneer:junit-pioneer:2.3.0'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
@@ -68,6 +69,8 @@ dependencyManagement {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs('--add-opens', 'java.base/java.util=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
 }
 
 bootRun {
